se agrego el footer

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#" class = "logo">
+            <div>
                 <h1>MARCOSCABRERA_</h1>
-            </a>
+            </div> 
             <ul class="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -26,5 +26,20 @@
             </ul>
         </nav>
     </header>
+    
+    <footer>
+        <div class = "navfooter">
+            <ul class="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class = "footerbottom">
+            <p>Copyright &copy;2025; Designed by <span class = "designer">Marcos Cabrera</span></p>
+        </div>
+    </footer>
 </body>
 </html>
