--- a/index.html
+++ b/index.html
@@ -3,43 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARCOS CABRERA PORTFOLIO</title>
-    <link rel="icon" type="image/png" href="/recursos/png-clipart-investment-greater-than-sign-investor-less-than-sign-portfolio-manager-programming-language-icon-angle-text.png"/>
+    <title>MyWebsite</title>
+    <link rel="icon" href="/recursos/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
     <script src="codigo.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header>
+
         <nav class="navbar">
             <div>
-                <h1>MARCOSCABRERA_</h1>
+                <h1>WELCO<span>M</span>E</h1>
             </div> 
+
             <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
             </ul>
+
         </nav>
+
     </header>
+    <hr>
+    <section>
+
+        <div class="homeimg">
+            <img src="/recursos/1735530363807.jpg" alt="profilepic">
+        </div>
+        <div class="homecontent">
+            <hr>
+            <h2>Hello! My name is <span>Marcos</span></h2>
+            <p>"I'm a developer and QA automation in training, from the northern area of Buenos Aires. I have a strong passion for technology and sports, with a focus on <span>web development</span> and <span>testing automation</span>. These are my main areas of interest. As for hobbies and passions, professional wrestling is something I truly <span>love</span>."</p>
+
+        </div>
+
+        </div>
+    </section>
     
+
     <footer>
         <div class = "navfooter">
             <ul class="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
+                <li><a href="">Skills</a></li>
                 <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
             </ul>
         </div>
 
         <div class = "footerbottom">
-            <p>Copyright &copy;2025; Designed by <span class = "designer">Marcos Cabrera</span></p>
+            <p>Copyright &copy;2025 Developed by Marcos Cabrera</p>
         </div>
+
     </footer>
+
 </body>
 </html>
